New Scene -> "Full Copy" Crashes Blender #73170

Closed
opened 2020-01-16 20:59:00 +01:00 by Steffen Dünner · 10 comments

System Information
Operating system: Linux-5.3.18-050318-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.48.02

Blender Version
Broken: version: 2.83 (sub 0), branch: master, commit date: 2020-01-16 17:54, hash: d42a7bbd6e
Worked: 2.83 01d9a2f71b

Short description of error
Using "Full Copy" to duplicate a scene instantly crashes Blender.

Exact steps for others to reproduce the error

  • Open Blender
  • Duplicate the current scene using "Full Copy" -> Crash
  • I also tried using "Load Factory Settings" before but to no avail
  • Happens on Linux and Windows, both with my own builds and with the current buildbot builds.
**System Information** Operating system: Linux-5.3.18-050318-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.48.02 **Blender Version** Broken: version: 2.83 (sub 0), branch: master, commit date: 2020-01-16 17:54, hash: `d42a7bbd6e` Worked: 2.83 01d9a2f71b56 **Short description of error** Using "Full Copy" to duplicate a scene instantly crashes Blender. **Exact steps for others to reproduce the error** - Open Blender - Duplicate the current scene using "Full Copy" -> Crash - I also tried using "Load Factory Settings" before but to no avail - Happens on Linux and Windows, both with my own builds and with the current buildbot builds.

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Steffen Dünner changed title from New Scene -> "Full Copy" Crashes Blender to New Scene -> "Copy Settings" Crashes Blender 2020-01-16 21:02:59 +01:00
Steffen Dünner changed title from New Scene -> "Copy Settings" Crashes Blender to New Scene -> "Full Copy" Crashes Blender 2020-01-16 21:04:43 +01:00

Update: Full Copy doesn't crash if the scene is completely empty, i.e. not containing any objects, camera or lights (or anything else).

Update: Full Copy doesn't crash if the scene is completely empty, i.e. not containing any objects, camera or lights (or anything else).

Added subscriber: @deadpin

Added subscriber: @deadpin

I can confirm here. Looks outliner related:

base variable is nullptr

blender.exe!outliner_add_layer_collection_objects(SpaceOutliner * soops, ListBase * tree, ViewLayer * layer, LayerCollection * lc, TreeElement * ten) Line 1365	C
blender.exe!outliner_add_layer_collections_recursive(SpaceOutliner * soops, ListBase * tree, ViewLayer * layer, ListBase * layer_collections, TreeElement * parent_ten, const bool show_objects) Line 1381	C
blender.exe!outliner_add_view_layer(SpaceOutliner * soops, ListBase * tree, TreeElement * parent, ViewLayer * layer, const bool show_objects) Line 1428	C
blender.exe!outliner_build_tree(Main * mainvar, Scene * scene, ViewLayer * view_layer, SpaceOutliner * soops, ARegion * ar) Line 2421	C
blender.exe!draw_outliner(const bContext * C) Line 3635	C
blender.exe!outliner_main_region_draw(const bContext * C, ARegion * ar) Line 96	C
blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 539	C
blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 635	C
blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 773	C
blender.exe!wm_draw_update(bContext * C) Line 953	C
blender.exe!WM_main(bContext * C) Line 424	C
blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C
I can confirm here. Looks outliner related: ``` base variable is nullptr blender.exe!outliner_add_layer_collection_objects(SpaceOutliner * soops, ListBase * tree, ViewLayer * layer, LayerCollection * lc, TreeElement * ten) Line 1365 C blender.exe!outliner_add_layer_collections_recursive(SpaceOutliner * soops, ListBase * tree, ViewLayer * layer, ListBase * layer_collections, TreeElement * parent_ten, const bool show_objects) Line 1381 C blender.exe!outliner_add_view_layer(SpaceOutliner * soops, ListBase * tree, TreeElement * parent, ViewLayer * layer, const bool show_objects) Line 1428 C blender.exe!outliner_build_tree(Main * mainvar, Scene * scene, ViewLayer * view_layer, SpaceOutliner * soops, ARegion * ar) Line 2421 C blender.exe!draw_outliner(const bContext * C) Line 3635 C blender.exe!outliner_main_region_draw(const bContext * C, ARegion * ar) Line 96 C blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 539 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 635 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 773 C blender.exe!wm_draw_update(bContext * C) Line 953 C blender.exe!WM_main(bContext * C) Line 424 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ```

Funny, yes. If I get rid of the Outliner I can actually do a "Full Copy" without instantly crashing Blender,. But as soon as I change the layout containing a Outliner again it crashes.

Funny, yes. If I get rid of the Outliner I can actually do a "Full Copy" without instantly crashing Blender,. But as soon as I change the layout containing a Outliner again it crashes.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-01-17 14:51:09 +01:00

@SteffenD Thanks for providing the has of a recent version that did still work. Made it lots easier to find out that ac723db57f caused the issue.

The crash occurs in outliner_add_layer_collection_objects(), because BKE_view_layer_base_find(layer, cob->ob); returns NULL (i.e. it cannot find the object's base).

@SteffenD Thanks for providing the has of a recent version that did still work. Made it lots easier to find out that ac723db57f caused the issue. The crash occurs in `outliner_add_layer_collection_objects()`, because `BKE_view_layer_base_find(layer, cob->ob);` returns `NULL` (i.e. it cannot find the object's base).
Sybren A. Stüvel removed their assignment 2020-01-17 15:52:12 +01:00
Bastien Montagne was assigned by Sybren A. Stüvel 2020-01-17 15:52:12 +01:00

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This issue was referenced by fb0fc1d613

This issue was referenced by fb0fc1d613317eef50fbd395829476ce0b932bfc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73170
No description provided.